--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,45 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: João Castelo
+email: joaocastelo.dev@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal GitHub Page for Joao Castelo
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://joaoppcastelo.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: JoaoPPCastelo
+github_username:  JoaoPPCastelo
 
 # Build settings
 remote_theme: "mmistakes/jekyll-theme-basically-basic@1.4.5"
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-paginate
+
+# Pagination settings
+paginate: 5  # amount of posts to show per page
+paginate_path: /page:num/
+
+# Search settings
+search: true
+
+# Author configurations
+author:
+  name: João Castelo
+  twitter: JoaoPPCastelo
+  picture: /assets/images/johndoe.png
+
+# Front Matter Defaults
+defaults:
+  # _posts
+  - scope:
+      path: "_posts"
+      type: posts
+    values:
+      layout: post
+      read_time: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
