--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,8 @@ defaults:
       layout: post
       read_time: true
 
+google_analytics: G-LGL6VGQCYJ
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
